@@ -1,3 +1,7 @@
+Thu Jun 18 18:16:01 1998  Jim Wilson  <wilson@cygnus.com>
+
+	* dwarf2out.c (size_of_string): Do count backslashes.
+
 Thu Jun 18 11:43:54 1998  Nick Clifton  <nickc@cygnus.com>
 
 	* config/arm/thumb.h (GO_IF_LEGITIMATE_ADDRESS): Disallow REG+REG 
